# ansible-waldur-module-next

./: README.md  pyproject.toml
ansible_waldur_module/: waldur_customer.py  waldur_openstack_instance_facts.py  waldur_openstack_security_group.py  waldur_openstack_subnet.py  waldur_os_instance.py  waldur_os_volume.py  waldur_project.py
ansible_waldur_module/ansible_collections/community/generic/: README.md  galaxy.yml
ansible_waldur_module/ansible_collections/community/generic/plugins/modules/: customer.py  openstack_instance_facts.py  openstack_security_group.py  openstack_subnet.py  os_instance.py  os_volume.py  project.py
ansible_waldur_module/ansible_collections/waldur/cloud/: README.md  galaxy.yml
ansible_waldur_module/ansible_collections/waldur/cloud/plugins/modules/: customer.py  openstack_instance_facts.py  openstack_instance_info.py  openstack_security_group.py  openstack_subnet.py  os_instance.py  os_volume.py  project.py  security_group_info.py  subnet_info.py
ansible_waldur_module/ansible_collections/waldur/marketplace/: README.md  galaxy.yml
ansible_waldur_module/ansible_collections/waldur/marketplace/meta/: runtime.yml
ansible_waldur_module/ansible_collections/waldur/marketplace/plugins/modules/: offering.py  order.py  (+5 more)
ansible_waldur_module/ansible_collections/waldur/openstack/: README.md  galaxy.yml
ansible_waldur_module/ansible_collections/waldur/openstack/meta/: runtime.yml
ansible_waldur_module/ansible_collections/waldur/structure/: README.md  galaxy.yml
ansible_waldur_module/ansible_collections/waldur/structure/meta/: runtime.yml
(+56 files in other folders)
